INTERNAL-411-57 - Fix message spacing on PDP on mobile

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-actions.phtml
@@ -332,7 +332,7 @@ $cartMessage = $block->getCartMessage();
 
 <!-- Status Message -->
 <?php if (!$isPopup && is_array($cartMessage)): ?>
-  <span class="basis-full <?= $cartMessage['status'] === 'error' ? 'text-error' : '' ?>">
+  <span class="basis-full max-md:px-3 <?= $cartMessage['status'] === 'error' ? 'text-error' : '' ?>">
     <?= $cartMessage['message'] ?>
   </span>
 <?php endif; ?>
