--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
@@ -80,7 +80,7 @@ $mixBackground = true;
                   :key="o"
                 >
                   <p
-                    class="text-md mb-1 [&_.price]:text-primary-500 [&_.price]:block whitespace-nowrap text-ellipsis overflow-hidden"
+                      class="text-[14px]"
                     x-html="`${option.label}: ${option.value}`"
                   ></p>
                 </template>
