INTERNAL-11: Implement before and after preview functionality

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-before-and-after/default/preview.html
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-before-and-after/default/preview.html
@@ -44,8 +44,7 @@
                 tabindex="-1"
             />
             <span
-                @pointerdown="onPointerDown"
-                @keydown="onKeyDown"
+                event="{ pointerdown: onPointerDown }"
                 tabindex="0"
                 role="slider"
                 id="exposure"
