--- a/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/before-and-after.phtml
+++ b/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/before-and-after.phtml
@@ -22,7 +22,8 @@ $id = uniqid();
 
 <div
     class="m-auto"
-    x-data="BeforeAfter({ id: '<?= $escaper->escapeHtmlAttr($id) ?>' })" id="<?= $escaper->escapeHtmlAttr($id) ?>"
+    x-data="BeforeAfter({ id: '<?= $escaper->escapeHtmlAttr($id) ?>' })"
+    id="<?= $escaper->escapeHtmlAttr($id) ?>"
     style="--exposure: 50%;"
 >
     <div
