INTERNAL-11: Add fallback to images

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_before-and-after.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_before-and-after.style.less
@@ -99,3 +99,14 @@
   width: 18px;
   transform: rotate(90deg);
 }
+
+.before-and-after__placeholder {
+  width: 100% !important;
+  height: 100% !important;
+  min-height: 300px;
+  fill: currentColor;
+  stroke: currentColor;
+  stroke-width: 0;
+  height: 18px;
+  width: 18px;
+}
