--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list.phtml
@@ -21,48 +21,50 @@ $productCollection = $block->getLoadedProductCollection()->addMediaGalleryData()
 $catalogData = $this->helper(Data::class);
 $breadcrumbs = $catalogData->getBreadcrumbPath();
 ?>
-<?php if (!$productCollection->count()): ?>
-    <div class="flex w-full flex-col gap-5 py-5 md:items-start">
-        <p>
-            <b class="text-secondary-700"><?= __('Oops!') ?></b>
-            <?= __('We could not find any products matching your selection.') ?>
-        </p>
-    </div>
-<?php else: ?>
-    <?= $block->getToolbarHtml() ?>
-    <?= $block->getAdditionalHtml() ?>
+<div class="pb-7">
+    <?php if (!$productCollection->count()): ?>
+        <div class="flex w-full flex-col gap-5 py-5 md:items-start">
+            <p>
+                <b class="text-secondary-700"><?= __('Oops!') ?></b>
+                <?= __('We could not find any products matching your selection.') ?>
+            </p>
+        </div>
+    <?php else: ?>
+        <?= $block->getToolbarHtml() ?>
+        <?= $block->getAdditionalHtml() ?>
 
-    <div class="flex md:items-start">
-        <div class="flex-grow">
-            <div
-                data-content-wrapper
-                id="product-grid"
-                class="mb-5 grid gap-6 transition-opacity duration-100 ease-linear grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5"
-                :class="{'opacity-0': isLoadingProducts}"
-            >
-                <!-- pagination-content -->
-                <?php
-                /** @var Product $product */
-                foreach (array_values($productCollection->getItems()) as $index => $product):
-                    if ($index < $eagerLoadImagesCount) {
-                        $product->setData('image_custom_attributes', ['loading' => 'eager', 'fetchpriority' => 'high']);
-                    }
-                    ?>
-                    <?= $productListItemViewModel->getItemHtml(
-                    $product,
-                    $block,
-                    'grid',
-                    ReviewRendererInterface::SHORT_VIEW,
-                    'category_page_grid',
-                    false,
-                    $index,
-                    $breadcrumbs
-                ); ?>
-                <?php endforeach; ?>
-                <!-- end-pagination-content -->
+        <div class="flex md:items-start">
+            <div class="flex-grow">
+                <div
+                    data-content-wrapper
+                    id="product-grid"
+                    class="mb-5 grid gap-6 transition-opacity duration-100 ease-linear grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5"
+                    :class="{'opacity-0': isLoadingProducts}"
+                >
+                    <!-- pagination-content -->
+                    <?php
+                    /** @var Product $product */
+                    foreach (array_values($productCollection->getItems()) as $index => $product):
+                        if ($index < $eagerLoadImagesCount) {
+                            $product->setData('image_custom_attributes', ['loading' => 'eager', 'fetchpriority' => 'high']);
+                        }
+                        ?>
+                        <?= $productListItemViewModel->getItemHtml(
+                        $product,
+                        $block,
+                        'grid',
+                        ReviewRendererInterface::SHORT_VIEW,
+                        'category_page_grid',
+                        false,
+                        $index,
+                        $breadcrumbs
+                    ); ?>
+                    <?php endforeach; ?>
+                    <!-- end-pagination-content -->
+                </div>
             </div>
         </div>
-    </div>
 
-    <?= $block->getChildBlock('toolbar')->setIsBottom(true)->toHtml() ?>
-<?php endif; ?>
+        <?= $block->getChildBlock('toolbar')->setIsBottom(true)->toHtml() ?>
+    <?php endif; ?>
+</div>
