--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
@@ -10,6 +10,7 @@
 @import "content-type/_quotes.style.less";
 @import "content-type/_before-and-after.style.less";
 @import "content-type/_video.style.less";
+@import "content-type/_video-hero.style.less";
 
 .pagebuilder-content-type .content-wrapper {
   padding-left: 16px;
