--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
@@ -87,15 +87,20 @@ if ($product) {
                         :src="src"
                     >
                 </div>
-                <img
-                    id="mobile-image"
-                    height="100%"
-                    width="100%"
-                    class="max-h-full w-auto object-center object-contain rounded-2xl mix-blend-darken"
-                    alt="<?= $escaper->escapeHtmlAttr($mainImage ? $mainImage->getData('label') : $productName) ?>"
-                    loading="lazy"
-                    src="<?= $mainImageUrl ?>"
+                <div
+                    class="absolute inset-0 z-10 flex items-center justify-center bg-[--fade-in-bg] transition-opacity delay-1000 duration-300 p-[4%]"
                 >
+                    <img
+                        id="mobile-image"
+                        height="100%"
+                        width="100%"
+                        class="max-h-full w-auto object-center object-contain rounded-2xl mix-blend-darken"
+                        alt="<?= $escaper->escapeHtmlAttr($mainImage ? $mainImage->getData('label') : $productName) ?>"
+                        loading="lazy"
+                        src="<?= $mainImageUrl ?>"
+                    >
+                </div>
+
                 <?= $template->setData(['product' => $product, 'class' => 'md:hidden bottom left'])->render('Magento_Catalog::product/list/discount-badge.phtml') ?>
 
                 <?php if($mainImage && $mainImage->getData('media_type') && str_contains($mainImage->getData('media_type'), 'video')): ?>
