--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-video-hero/default/preview.html
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-video-hero/default/preview.html
@@ -1,54 +1,63 @@
 <div
     attr="data.main.attributes"
     ko-style="data.main.style"
-    class="pagebuilder-content-type satoshi-video"
+    class="pagebuilder-content-type video-hero"
     css="data.main.css"
     event="{ mouseover: onMouseOver, mouseout: onMouseOut }, mouseoverBubble: false"
 >
-    <div class="video__wrapper">
-        <button class="video__wrapper--button">
-            <div class="video__intro">
-                <div class="video__intro--container">
-                    <div>
-                        <h2
-                            attr="data.description.attributes"
-                            ko-style="data.description.style"
-                            css="data.description.css"
-                            data-bind="liveEdit: { field: 'description', placeholder: $t('Enter description') }"
-                        ></h2>
-                        <h1
-                            attr="data.heading.attributes"
-                            ko-style="data.heading.style"
-                            css="data.heading.css"
-                            data-bind="liveEdit: { field: 'heading', placeholder: $t('Enter heading') }"
-                        ></h1>
-                    </div>
-                    <span>
-                        <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            aria-hidden="true"
-                            focusable="false"
-                            role="presentation"
-                            fill="none"
-                            viewBox="0 0 10 14"
-                        >
-                            <path
-                                fill-rule="evenodd"
-                                clip-rule="evenodd"
-                                d="M1.48177 0.814643C0.81532 0.448245 0 0.930414 0 1.69094V12.2081C0 12.991 0.858787 13.4702 1.52503 13.0592L10.5398 7.49813C11.1918 7.09588 11.1679 6.13985 10.4965 5.77075L1.48177 0.814643Z"
-                                fill="currentColor"
-                            ></path>
-                            <title>play</title>
-                        </svg>
+    <div class="video-hero__wrapper">
+        <div
+            class="video-hero__overlay"
+            data-bind="attr: {style: 'opacity: ' + (+data.overlay_opacity.html() / 100)}"
+        ></div>
+
+        <div class="video-hero__intro">
+            <div>
+                <h1
+                    class="video-hero__title"
+                    attr="data.heading.attributes"
+                    ko-style="data.heading.style"
+                    css="data.heading.css"
+                    data-bind="liveEdit: { field: 'heading', placeholder: $t('Enter heading') }"
+                ></h1>
+                <p
+                    attr="data.description.attributes"
+                    ko-style="data.description.style"
+                    css="data.description.css"
+                    data-bind="liveEdit: { field: 'description', placeholder: $t('Enter description') }"
+                    class="video-hero__description"
+                ></p>
+                <div
+                    class="video-hero__btn"
+                    attr="data.button_link.attributes"
+                    ko-style="data.button_link.style"
+                    css="data.button_link.css"
+                >
+                    <span
+                        attr="data.button_label.attributes"
+                        data-bind="liveEdit: { field: 'button_label', placeholder: $t('Enter label'), selectAll: true }"
+                    >
                     </span>
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        fill="none"
+                        viewBox="0 0 16 16"
+                    >
+                        <path
+                            d="M8.005 1.338A6.618 6.618 0 0 0 3.29 3.286a6.675 6.675 0 0 0 0 9.428 6.62 6.62 0 0 0 4.714 1.949 6.62 6.62 0 0 0 4.714-1.95c2.599-2.598 2.599-6.827 0-9.427a6.618 6.618 0 0 0-4.714-1.948Zm3.771 10.433a5.297 5.297 0 0 1-3.771 1.558 5.298 5.298 0 0 1-3.772-1.558 5.34 5.34 0 0 1 0-7.542A5.296 5.296 0 0 1 8.005 2.67c1.427 0 2.766.553 3.771 1.558a5.34 5.34 0 0 1 0 7.542Z"
+                        ></path>
+                        <path
+                            d="M7.645 7.417 5.502 9.559l.943.943 2.142-2.143 1.417 1.416V6H6.229l1.416 1.417Z"
+                        ></path>
+                    </svg>
                 </div>
             </div>
-        </button>
+        </div>
         <iframe
             frameborder="0"
             allowfullscreen
             attr="data.video.attributes"
-            style="display: none"
+            class="video-hero__iframe"
         ></iframe>
     </div>
     <render args="getOptions().template" />
