INTERNAL-411-4; remove close icon's title of clear search

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search.phtml
@@ -76,7 +76,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
           }
         "
       >
-        <?= $hyvaicons->renderHtml('close'); ?>
+          <?= $hyvaicons->renderHtml('close', attributes: ['title' => '']); ?>
       </button>
     </div>
   </form>
