INTERNAL-30: Implement countdown content type

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
@@ -11,6 +11,7 @@
 @import "content-type/_before-and-after.style.less";
 @import "content-type/_video.style.less";
 @import "content-type/_video-hero.style.less";
+@import "content-type/_countdown.style.less";
 
 .pagebuilder-content-type .content-wrapper {
   padding-left: 16px;
