--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/search/search.phtml
@@ -39,7 +39,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
       <input
         type="search"
         placeholder="<?= __('Search') ?>"
-        class="input__field input__field--filled focus-visible:input__field--outline md:input__field--ghost md:focus-visible:input__field--ghost border-transparent pr-11 placeholder:text-text-500 md:order-2 md:px-2 md:placeholder:text-primary-500 md:focus-visible:border-transparent md:focus-visible:shadow-none md:focus-visible:outline-0"
+        class="input__field input__field--filled border-none focus-visible:input__field--outline md:input__field--ghost md:focus-visible:input__field--ghost pr-11 placeholder:text-text-500 md:order-2 md:px-2 md:placeholder:text-primary-500 md:focus-visible:border-transparent md:focus-visible:shadow-none md:focus-visible:outline-0"
         x-model="searchTermInput"
         @input.debounce.300ms="setSearchTerm"
         name="q"
