INTERNAL-411-88: Fix order history go back link hard refresh

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/account/link/back.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/account/link/back.phtml
@@ -3,6 +3,7 @@
 ?>
 <div class="mb-5">
     <a class="button button--filled-primary"
+       x-element-transition-trigger
        href="<?= $block->escapeUrl($block->getBackUrl()) ?>">
         <span>
             <?= $block->escapeHtml(__('Go back')) ?>
