--- a/app/design/frontend/Satoshi/Hyva/Magento_Newsletter/templates/subscribe.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Newsletter/templates/subscribe.phtml
@@ -71,12 +71,16 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
         </div>
 
         <?= $block->getBlockHtml('formkey') ?>
-        <div
-            id="newsletter-recaptcha-container"
-            class="origin-top-left scale-[0.8] max-w-[245px] sm:scale-100 sm:max-w-none md:scale-[0.65] lg:scale-90 xl:scale-100"
-        >
-            <?= $recaptcha ? $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER) : '' ?>
-        </div>
+
+        <?php if ($recaptcha && $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER)): ?>
+            <div
+                id="newsletter-recaptcha-container"
+                class="origin-top-left scale-[0.8] max-w-[245px] sm:scale-100 sm:max-w-none md:scale-[0.65] lg:scale-90 xl:scale-100"
+            >
+                <?= $recaptcha->getInputHtml(ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER); ?>
+            </div>
+        <?php endif; ?>
+
         <button
             type="submit"
             class="button button--filled-primary w-full"
