--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-slide/default/preview.html
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-slide/default/preview.html
@@ -1,14 +1,11 @@
 <div
     attr="data.main.attributes"
     ko-style="data.main.style"
-    class="pagebuilder-content-type pagebuilder-slider children-min-height"
+    class="pagebuilder-content-type quotes"
     css="data.main.css"
     event="{ mouseover: onMouseOver, mouseout: onMouseOut }, mouseoverBubble: false"
 >
-    <div style="height: 300px">
-        <div style="padding: 50px">slideshow parent!</div>
-        <render args="childTemplate"></render>
-    </div>
+    <div style="height: 100px">slide itself!</div>
 
     <render args="getOptions().template" />
 </div>
