Implement shop the look content type

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
@@ -12,6 +12,7 @@
 @import "content-type/_video.style.less";
 @import "content-type/_video-hero.style.less";
 @import "content-type/_countdown.style.less";
+@import "content-type/_shop-the-look.style.less";
 
 .pagebuilder-content-type .content-wrapper {
   padding-left: 16px;
