--- a/app/design/frontend/Satoshi/Hyva/Magento_Cms/templates/page.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Cms/templates/page.phtml
@@ -18,7 +18,7 @@ use Magento\Framework\View\Element\Template;
   <?php endif; ?>
 
   <div
-    class="rte animate-on-transition"
+    class="animate-on-transition"
     itemprop="articleBody"
   >
     <?= $block->getChildHtml('cms_page') ?>
