--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_rte.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_rte.scss
@@ -1,4 +1,5 @@
-.rte:not(:has([data-element="block_directive"])) {
+.rte:not(:has([data-element="block_directive"])),
+[data-content-type="text"] {
   /**
    * Unreset CSS
    *
