--- a/app/design/frontend/Satoshi/Hyva/Magento_Checkout/templates/cart-main.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Checkout/templates/cart-main.phtml
@@ -7,7 +7,7 @@ use Satoshi\Theme\Block\Template;
 $title = $block->getLayout()->createBlock('Magento\Theme\Block\Html\Title')->getPageHeading();
 ?>
 
-<div class="md:content-wrapper mt-[72px] md:mx-auto md:pb-10  max-md:h-[calc(100vh-106px)] max-md:overflow-y-scroll">
+<div class="cart-main md:content-wrapper mt-[72px] md:mx-auto md:pb-10 max-md:h-[calc(100vh-106px)] max-md:overflow-y-scroll">
   <?=
     $template
       ->setData([
