--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item.phtml
@@ -34,7 +34,7 @@ $index = $block->getData('index');
 $isLarge = $nthLarge && !(($index + 1) % $nthLarge);
 
 // Add a setting allowing merchants to choose between cover or contain ?
-$fitType = 'cover';
+$fitType = 'contain';
 $isContain = $fitType === 'contain';
 
 $isSearch = $block->getData('is_search_card');
@@ -116,7 +116,7 @@ if ($product) {
                     <div
                         class="aspect-product w-full h-full flex items-center justify-center transition-transform bg-[--fade-in-bg]">
                         <img
-                            class="mix-blend-darken object-center max-h-full md:group-hover:scale-105 <?= $isContain ? 'object-contain rounded-md p-[2%]' : 'object-cover h-full w-full' ?>"
+                            class="faded-img transition-opacity duration-300 object-center max-h-full <?= $isContain ? 'object-contain rounded-md p-[2%]' : 'object-cover h-full w-full' ?> no-fade mix-blend-darken"
                             src="<?= $escaper->escapeUrl($imageUrl) ?>"
                             alt="<?= $escaper->escapeHtmlAttr($product->getName()) ?>" loading="lazy">
                     </div>
