INTERNAL-411-2: Fix product preview opens too low and page jump up

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/transition-preview.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/layout/transition/transition-preview.phtml
@@ -45,10 +45,9 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
     <div
       x-ref="scrollContainer"
       class="transition-preview__scroll"
-      x-a11y-trap="isActive"
     >
       <div class="content-wrapper relative mx-auto">
-        <div class="transition-preview__content" x-ref="transitionContent">
+          <div class="transition-preview__content" x-ref="transitionContent" :tabindex="open ? '0' : '-1'">
           <div id="PreviewContent"></div>
           <div class="content-wrapper pointer-events-none fixed bottom-0 left-1/2 z-50 -translate-x-1/2">
             <div
