INTERNAL-28: Implement featured product content type
Blocked at reusing pdp info in content type

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
@@ -13,6 +13,7 @@
 @import "content-type/_video-hero.style.less";
 @import "content-type/_countdown.style.less";
 @import "content-type/_shop-the-look.style.less";
+@import "content-type/_featured-product.style.less";
 
 .pagebuilder-content-type .content-wrapper {
   padding-left: 16px;
