--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-details.phtml
@@ -9,8 +9,9 @@ use Magento\Framework\Escaper;
 use Satoshi\Theme\Block\Template;
 use Magento\Catalog\Helper\Image;
 use Hyva\Theme\ViewModel\HeroiconsSolid;
+use Magento\Catalog\Block\Product\View;
 
-/** @var Template $template */
+/** @var View $template */
 /** @var Escaper $escaper */
 /** @var Gallery $block */
 /** @var ViewModelRegistry $viewModels */
