--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_image-with-text.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_image-with-text.style.less
@@ -52,6 +52,14 @@
   object-position: center;
 }
 
+.image-with-text__image svg {
+  width: 100%;
+  object-fit: cover;
+  background-color: #d0d2cc;
+  min-height: 300px;
+  object-position: center;
+}
+
 @media (min-width: 768px) {
   .image-with-text {
     display: grid;
@@ -85,6 +93,10 @@
   }
 
   .image-with-text__image img {
+    height: 100%;
+  }
+
+  .image-with-text__image svg {
     height: 100%;
   }
 }
