--- a/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/image-with-text.phtml
+++ b/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/image-with-text.phtml
@@ -33,7 +33,7 @@ $appearance = $block->getData('appearance');
 
     <div class="flex flex-col items-start gap-5 md:gap-7 md:py-12 md:pl-12 md:self-center w-full" style="<?= $appearance === 'text-first' ? 'order: -1' : '' ?>">
         <h2 class="heading text-3xl text-text-500 md:text-4xl w-full"><?= $escaper->escapeHtml($block->getData('heading')) ?></h2>
-        <div><?= $block->getData('description') ?></div>
+        <div class="w-full"><?= $block->getData('description') ?></div>
 
         <div class="w-full">
             <a
