Add wysiwyg to image-with-text content type

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/_module.less
@@ -35,3 +35,16 @@
     max-width: 1536px;
   }
 }
+
+.pagebuilder-content-type.pagebuilder-wysiwyg
+  .inline-wysiwyg
+  + .placeholder-text {
+  left: 0;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+}
+
+.pagebuilder-wygiwyg-text-content {
+  position: relative;
+}
