--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_image-with-text.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_image-with-text.style.less
@@ -60,6 +60,12 @@
   object-position: center;
 }
 
+.image-with-text__wysiwyg {
+  color: #363030 !important;
+  margin-bottom: 12px !important;
+  font-size: 16px !important;
+}
+
 @media (min-width: 768px) {
   .image-with-text {
     display: grid;
