--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-image-with-text/default/master.html
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-image-with-text/default/master.html
@@ -1,53 +1,49 @@
-<div
-  attr="data.main.attributes"
-  ko-style="data.main.style"
-  css="data.main.css"
->
-  <div data-is-page-builder-ignored-element="true">
-    <img
-      css="data.image.css"
-      attr="data.image.attributes"
-      ko-style="data.image.style"
-      width="100%"
-      height="100%"
-      loading="lazy"
-      hidden
-    />
+<div attr="data.main.attributes" ko-style="data.main.style" css="data.main.css">
+    <div data-is-page-builder-ignored-element="true">
+        <img
+            css="data.image.css"
+            attr="data.image.attributes"
+            ko-style="data.image.style"
+            width="100%"
+            height="100%"
+            loading="lazy"
+            hidden
+        />
 
-    <h2
-      attr="data.heading.attributes"
-      ko-style="data.heading.style"
-      css="data.heading.css"
-      html="data.heading.html"
-      hidden
-    ></h2>
+        <h2
+            attr="data.heading.attributes"
+            ko-style="data.heading.style"
+            css="data.heading.css"
+            html="data.heading.html"
+            hidden
+        ></h2>
 
-    <p
-      attr="data.description.attributes"
-      ko-style="data.description.style"
-      css="data.description.css"
-      html="data.description.html"
-      hidden
-    ></p>
+        <p
+            attr="data.content.attributes"
+            ko-style="data.content.style"
+            css="data.content.css"
+            html="data.content.html"
+            hidden
+        ></p>
 
-    <a
-      attr="data.button_link.attributes"
-      ko-style="data.button_link.style"
-      css="data.button_link.css"
-      hidden
-    >
-      <span
-        attr="data.button_label.attributes"
-        ko-style="data.button_label.style"
-        css="data.button_label.css"
-        html="data.button_label.html"
-        hidden
-      ></span>
-    </a>
-  </div>
+        <a
+            attr="data.button_link.attributes"
+            ko-style="data.button_link.style"
+            css="data.button_link.css"
+            hidden
+        >
+            <span
+                attr="data.button_label.attributes"
+                ko-style="data.button_label.style"
+                css="data.button_label.css"
+                html="data.button_label.html"
+                hidden
+            ></span>
+        </a>
+    </div>
 
-  <div
-    attr="data.block_directive.attributes"
-    html="data.block_directive.html"
-  ></div>
+    <div
+        attr="data.block_directive.attributes"
+        html="data.block_directive.html"
+    ></div>
 </div>
