--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-form.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/view/product-form.phtml
@@ -12,6 +12,7 @@ use Magento\Framework\Escaper;
 /** @var Product $product */
 $product = $block->getProduct();
 $productType = $product->getTypeId();
+$isConfigurableProduct = $productType === 'configurable';
 
 /**
  * @see \Magento\Checkout\Block\Cart\Item\Configure::_prepareLayout
@@ -28,11 +29,12 @@ $isPopup = $block->getData('is_popup') ?? false;
           id="product_addtocart_form"
           <?php if ($product->getOptions()): ?> enctype="multipart/form-data"<?php endif; ?>
           @submit.prevent="addToCart($event)"
-      <?php if (!$isPopup): ?>
-        class="animate-on-transition md:mb-5 max-md:hidden"
-      <?php else: ?>
-        class="max-md:mx-2"
-      <?php endif; ?>
+          <?php if ($isConfigurableProduct): ?> x-init="selectFirstInStockConfigurableOption" <?php endif; ?>
+          <?php if (!$isPopup): ?>
+            class="animate-on-transition md:mb-5 max-md:hidden"
+          <?php else: ?>
+            class="max-md:mx-2"
+          <?php endif; ?>
     >
       <input type="hidden" name="product" value="<?= (int) $product->getId() ?>"/>
       <input type="hidden" name="selected_configurable_option" value=""/>
