--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-image-with-text/default/master.html
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/template/content-type/satoshi-image-with-text/default/master.html
@@ -18,13 +18,13 @@
             hidden
         ></h2>
 
-        <p
+        <div
             attr="data.content.attributes"
             ko-style="data.content.style"
             css="data.content.css"
             html="data.content.html"
             hidden
-        ></p>
+        ></div>
 
         <a
             attr="data.button_link.attributes"
