--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_countdown.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_countdown.style.less
@@ -183,8 +183,8 @@
   fill: currentColor;
   stroke: currentColor;
   stroke-width: 0;
-  height: 1em;
-  width: 1em;
+  height: 16px;
+  width: 16px;
 }
 
 .countdown__btn--img svg {
