--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_image-banner.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_image-banner.style.less
@@ -23,6 +23,22 @@
   object-position: center;
 }
 
+.image-banner__placeholder {
+  object-position: center;
+  -o-object-fit: cover;
+  object-fit: cover;
+  background-color: #d0d2cc;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  position: absolute;
+  fill: currentColor;
+  stroke: currentColor;
+  stroke-width: 0;
+}
+
 .image-banner__container {
   max-width: 1200px;
   position: relative;
@@ -119,6 +135,20 @@
   height: 48px;
   background-color: #ffffff;
   color: #5e6c5a;
+}
+
+.image-banner__btn svg {
+  margin-left: 4px;
+  position: relative;
+  display: inline-flex;
+  flex-shrink: 0;
+  align-items: center;
+  justify-content: center;
+  fill: currentColor;
+  stroke: currentColor;
+  stroke-width: 0;
+  height: 16px;
+  width: 16px;
 }
 
 @media (min-width: 768px) {
