--- a/app/design/frontend/Satoshi/Hyva/Magento_Swatches/templates/product/swatch-item.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Swatches/templates/product/swatch-item.phtml
@@ -31,7 +31,8 @@ if (!$productId || !$attributeId) {
     class="button button--size-sm select-none transition-all ease-in-out relative bg-bg-500"
     :class="
       {
-        'button--outline-primary border-2 button--disabled !opacity-100': selectedValues[<?= (int) $attributeId ?>] === item.id || !optionIsActive(<?= (int) $attributeId ?>, item.id),
+        'button--outline-primary button--disabled': !optionIsActive(<?= (int)$attributeId ?>, item.id),
+        'button--outline-primary border-2': selectedValues[<?= (int)$attributeId ?>] === item.id,
         'button--outline-secondary': selectedValues[<?= (int) $attributeId ?>] !== item.id,
       }
     "
