Refactor collage content type

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_collage.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_collage.style.less
@@ -125,7 +125,9 @@
   }
 
   .collage--item:hover .collage-image > div,
-  .collage--item:hover .collage-image > svg {
+  .collage--item:hover .collage-image > svg,
+  .collage--featured:hover .collage-image > div,
+  .collage--featured:hover .collage-image > svg {
     transform: scaleX(1.05) scaleY(1.05);
   }
 }
