Content types quick fixes

--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_before-and-after.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_before-and-after.style.less
@@ -3,9 +3,12 @@
 }
 
 .before-and-after__container {
-  border-radius: 12px;
   overflow: hidden;
   position: relative;
+}
+
+[data-appearance="contained"] .before-and-after__container {
+  border-radius: 12px;
 }
 
 .before-and-after__container-small {
