--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_quotes.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_quotes.style.less
@@ -1,6 +1,9 @@
 .quotes {
   padding: 48px;
   background-color: #d0d2cc;
+}
+
+[data-appearance="contained"] .quotes {
   border-radius: 12px;
 }
 
