--- a/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_video.style.less
+++ b/app/code/Satoshi/SatoshiUi/view/adminhtml/web/css/source/content-type/_video.style.less
@@ -1,8 +1,11 @@
 .satoshi-video .video__wrapper {
-  border-radius: 12px;
   overflow: hidden;
   height: calc(640px / 1.816);
   position: relative;
+}
+
+[data-appearance="contained"] .satoshi-video .video__wrapper {
+  border-radius: 12px;
 }
 
 .satoshi-video .video__wrapper--button {
@@ -12,10 +15,10 @@
   -webkit-appearance: button;
   background-color: transparent;
   background-image: none;
+  padding: 0 !important;
 }
 
 .satoshi-video .video__thumbnail {
-  border-radius: 12px;
   width: 100%;
   height: 100%;
 }
@@ -23,7 +26,6 @@
 .satoshi-video .video__thumbnail--img {
   -o-object-fit: cover;
   object-fit: cover;
-  border-radius: 12px;
   width: 100%;
   height: calc(640px / 1.816);
 }
@@ -38,7 +40,7 @@
 .satoshi-video .video__intro {
   padding-left: 16px;
   padding-right: 16px;
-  background-image: linear-gradient(to bottom, #00000020, #00000060);
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.6));
   justify-content: center;
   align-items: center;
   width: 100%;
