--- a/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/before-and-after.phtml
+++ b/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/before-and-after.phtml
@@ -2,10 +2,10 @@
 
 declare(strict_types=1);
 
+use Hyva\Theme\Model\ViewModelRegistry;
+use Hyva\Theme\ViewModel\SvgIcons;
 use Magento\Framework\Escaper;
 use Magento\Framework\View\Element\Template;
-use Hyva\Theme\ViewModel\SvgIcons;
-use Hyva\Theme\Model\ViewModelRegistry;
 
 /** @var Template $block */
 /** @var Escaper $escaper */
@@ -28,7 +28,7 @@ $id = uniqid();
 >
     <div
         class="
-            relative overflow-hidden rounded-md
+            relative overflow-hidden [[data-appearance='contained']_&]:rounded-md
             <?= match($sectionHeight) {
                 'small' => 'h-[40vh]',
                 'medium' => 'h-[60vh]',
