--- a/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/quotes.phtml
+++ b/app/code/Satoshi/SatoshiUi/view/frontend/templates/satoshi_ui/quotes.phtml
@@ -2,11 +2,12 @@
 
 declare(strict_types=1);
 
+use Hyva\Theme\Model\ViewModelRegistry;
+use Hyva\Theme\ViewModel\SvgIcons;
 use Magento\Framework\Escaper;
 use Satoshi\SatoshiUi\Block\Quotes;
-use Satoshi\Theme\Block\Template;
 use Satoshi\SatoshiUi\Helper\Decode as DecodeHelper;
-use Hyva\Theme\ViewModel\SvgIcons;
+use Satoshi\Theme\Block\Template;
 
 /** @var Quotes $block */
 /** @var Template $template */
@@ -51,7 +52,7 @@ foreach ($quotes as $quote) {
 ?>
 <div>
     <div
-        class="rounded-md bg-secondary-400 px-7 py-8 md:p-12"
+        class="[[data-appearance='contained']_&]:rounded-md bg-secondary-400 px-7 py-8 md:p-12"
         x-data="Slider()"
     >
         <div class="mb-7 flex w-full items-center justify-between md:mb-8">
