Fix hide filters button in PLP

--- a/app/design/frontend/Satoshi/Hyva/Magento_CatalogSearch/layout/catalogsearch_result_index.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_CatalogSearch/layout/catalogsearch_result_index.xml
@@ -10,5 +10,7 @@
         <move element="preview.content" destination="product-grid-container"/>
         <move element="main" destination="columns" before="-" />
         <move element="page.main.title" destination="search.banner" />
+        <referenceContainer name="columns" htmlClass="grid-columns-plp"/>
+        <move element="div.sidebar.additional" destination="sidebar.main" after="-"/>
     </body>
 </page>
