--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_category_view.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_category_view.xml
@@ -10,6 +10,8 @@
         <move element="preview.content" destination="product-grid-container"/>
         <move element="main" destination="columns" before="-" />
         <move element="page.main.title" destination="category.banner" />
+        <referenceContainer name="columns" htmlClass="grid-columns-plp"/>
+        <move element="div.sidebar.additional" destination="sidebar.main" after="-"/>
 
         <referenceBlock name="category.description" remove="true" />
         <referenceBlock name="category.image" remove="true" />
