--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/category/grid-container.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/category/grid-container.phtml
@@ -8,11 +8,14 @@ use Magento\Framework\View\Element\Template;
 ?>
 
 <section
-  id="ProductGridContainer"
-  class="content-wrapper animate-on-transition mx-auto"
-  x-ref="ProductGridContainer"
-  x-data="ProductList('')"
-  key="ProductList-all"
+    id="ProductGridContainer"
+    class="plp-grid-wrapper content-wrapper animate-on-transition mx-auto"
+    :class="{
+        'plp-grid-wrapper--full': !$store.productList.isFiltersSidebarExpanded
+    }"
+    x-ref="ProductGridContainer"
+    x-data="ProductList('')"
+    key="ProductList-all"
 >
-  <?= $block->getChildHtml() ?>
+    <?= $block->getChildHtml() ?>
 </section>
